--- a/src/app.pcss
+++ b/src/app.pcss
@@ -72,6 +72,10 @@
   * {
     @apply border-border;
   }
+  html, body {
+    width: 100%;
+    height: 100%;
+  }
   body {
     @apply bg-background text-foreground;
   }
